# netops-copilot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  promote-images.yml
apps/web/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json
apps/web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/app/cases/: cases.module.css  layout.tsx  loading.tsx  page.tsx  queue-events.tsx
apps/web/components/auth/: authentication-required.tsx
apps/web/components/shell/: product-shell.tsx
apps/web/lib/api/: cases.ts  client.ts
apps/web/lib/auth/: session.ts
apps/web/lib/config/: server.ts
apps/web/providers/: query-provider.tsx
apps/web/tests/: source-contract.test.mjs
docs/: ARCHITECTURE.md  CI_ARTIFACTS.md  DEMO_RUNBOOK.md  DEVPOST_SUBMISSION.md  IMPLEMENTATION_TODO.md
docs/adr/: README.md
docs/policies/: data-governance.md
infra/: README.md
infra/keycloak/: netops-dev-realm.json
infra/observability/: otel-collector.yaml  tempo.yaml
infra/postgres/init/: 00-databases.sql  01-extensions.sql
infra/postgres/test-init/: 00-extensions.sql
scripts/: check-secret-hygiene.sh  generate-api-client.py  seed-local-demo.sql  verify-local-stack.sh  verify-pkce-trace.py  verify-signed-trace.sh
services/api/: AUTHENTICATION.md  DEPENDENCY_RESOLUTION.md  Dockerfile  alembic.ini  docker-healthcheck.py
services/api/alembic/: env.py  script.py.mako
services/api/alembic/versions/: 20260715_01_tenant_identity_rls.py  20260715_02_case_spine.py  20260716_03_artifact_metadata.py  20260716_04_artifact_upload_intents.py  20260716_05_artifact_processing_ledger.py  20260716_06_artifact_completion_outbox.py  README.md
services/api/netops_api/: __init__.py  main.py
services/api/netops_api/api/: __init__.py  artifact_status.py  artifact_upload_completion.py  artifact_uploads.py  cases.py  config_preview.py  errors.py  events.py  health.py  identity.py
services/api/netops_api/application/: __init__.py  artifact_intents.py  artifact_processing.py  artifact_status.py  artifacts.py  cases.py  config_preview.py  event_feed.py  outbox.py
services/api/netops_api/core/: __init__.py  auth.py  config.py  database.py  dependencies.py  logging.py  middleware.py  observability.py  rate_limit.py  sentry.py  (+2 more)
services/api/tests/: conftest.py  test_api_client_contract.py  test_health.py
services/connector-agent/: README.md
services/worker/: Dockerfile  README.md  docker-healthcheck.py
services/worker/netops_worker/: __init__.py  artifact_processing.py  artifact_processing_persistence.py  clamav.py  config.py  config_redaction.py  health.py  logging.py  main.py  observability.py  outbox_publisher.py  outbox_transport.py  runtime_probe.py
services/worker/tests/: test_artifact_processing.py  test_artifact_processing_persistence.py  test_clamav.py  test_config.py  test_config_redaction.py  test_health.py  test_main.py  test_outbox_publisher.py  test_outbox_transport.py  test_outbox_transport_postgres.py  test_runtime_probe.py
tests/: README.md
(+65 files in other folders)
