[build-system]
requires = ["setuptools==75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netops-copilot-api"
version = "0.1.0"
description = "NetOps Copilot domain API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic==1.14.1",
  "boto3==1.35.99",
  "fastapi==0.115.8",
  "opentelemetry-api==1.30.0",
  "opentelemetry-exporter-otlp-proto-http==1.30.0",
  "opentelemetry-instrumentation-fastapi==0.51b0",
  "opentelemetry-sdk==1.30.0",
  "pydantic-settings==2.7.1",
  "psycopg[binary]==3.2.4",
  "PyJWT[crypto]==2.10.1",
  "SQLAlchemy==2.0.37",
  "sentry-sdk[fastapi]==2.20.0",
  "temporalio==1.22.0",
  "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "mypy==1.14.1",
  "pre-commit==4.6.0",
  "pytest==8.3.4",
  "ruff==0.9.7",
]

[project.scripts]
netops-api = "netops_api.main:run"
netops-worker = "netops_worker.main:run"

[tool.setuptools]
package-dir = {}

[tool.setuptools.packages.find]
where = ["services/api", "services/worker"]
include = ["netops_api*", "netops_worker*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["services/api/tests", "services/worker/tests"]
pythonpath = ["services/api", "services/worker"]
addopts = "-ra --strict-markers"
markers = [
  "integration: requires the isolated PostgreSQL test service and explicit test DSNs",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["services/api", "services/worker"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["netops_api"]

[tool.mypy]
python_version = "3.12"
files = ["services/api/netops_api", "services/worker/netops_worker"]
strict = true
warn_unused_configs = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
